@@ -18,23 +18,6 @@
  */
 package co.elastic.apm.agent.dubbo.api;
 
-import java.util.concurrent.CompletableFuture;
-
-public interface DubboTestApi {
-
-    String normalReturn(String arg1, Integer arg2);
-
-    String throwBizException(String arg1);
-
-    String timeout(String arg);
-
-    String async(String arg1);
-
-    void asyncNoReturn(String arg1);
-
-    CompletableFuture<String> asyncByFuture(String arg1);
-
-    String asyncByAsyncContext(String arg1);
-
-    String willInvokeAnotherApi(String arg);
+public interface AnotherApi {
+    String echo(String arg);
 }
