@@ -16,25 +16,14 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-package co.elastic.apm.agent.dubbo.api;
+package co.elastic.apm.agent.dubbo.api.impl;
 
-import java.util.concurrent.CompletableFuture;
+import co.elastic.apm.agent.dubbo.api.AnotherApi;
 
-public interface DubboTestApi {
+public class AnotherApiImpl implements AnotherApi {
 
-    String normalReturn(String arg1, Integer arg2);
-
-    String throwBizException(String arg1);
-
-    String timeout(String arg);
-
-    String async(String arg1);
-
-    void asyncNoReturn(String arg1);
-
-    CompletableFuture<String> asyncByFuture(String arg1);
-
-    String asyncByAsyncContext(String arg1);
-
-    String willInvokeAnotherApi(String arg);
+    @Override
+    public String echo(String arg) {
+        return arg;
+    }
 }
